Fixed betas in log.reg. theory

--- a/AppliedML_project.ipynb
+++ b/AppliedML_project.ipynb
@@ -1509,9 +1509,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Logistic regression is said to b the It is the go-to method for binary classification problems. The core of the method is the statistical function called logistic regression. It is an S-shaped curve that ensures that the estimated probabilities lie in the interval between 0 and 1. This model works by first fitting a logistic regression model to our data set. The coefficients $ \\hat{β̂_{0}} $ and $\\hat{β̂_{1}}$ is estimated from the training data using maximum-likelihood estimation.\n",
+        "Logistic regression is said to b the It is the go-to method for binary classification problems. The core of the method is the statistical function called logistic regression. It is an S-shaped curve that ensures that the estimated probabilities lie in the interval between 0 and 1. This model works by first fitting a logistic regression model to our data set. The coefficients $ \\hat{\\beta_{0}} $ and $\\hat{\\beta_{1}}$ is estimated from the training data using maximum-likelihood estimation.\n",
         "This is then used to make a prediction when given a new observation $ x_0 $. This prediction is made based on the following equation: \n",
-        "$\\hat{p}(x_{0})={\\frac{\\hat{β_{0}}+\\hat{β_{1x_{0}}}}{1+e^{\\hat{β_{0}}+\\hat{β_{1x_{0}}}}} }  $\n",
+        "$\\hat{p}(x_{0})={\\frac{\\hat{\\beta_{0}}+\\hat{\\beta_{1x_{0}}}}{1+e^{\\hat{\\beta_{0}}+\\hat{\\beta_{1x_{0}}}}} }  $\n",
         "\n",
         "Where the $\\hat{p}(x_{0})$ is the estimated probability that the new observation belongs to the class. "
       ]
