added explanation of confusion matrix and KNN

--- a/AppliedML_project.ipynb
+++ b/AppliedML_project.ipynb
@@ -1152,6 +1152,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "1ThIEh8_saBW",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Confusion matrices**\n",
+        "\n",
+        "When calcualting the misclassification rate we also show the confusion matrices for a more visual result of the predictive power of the models we consider. A confusion matrix is simply a visualization of the classified samples in the test set, where correctly classified samples are on the main diagonal while misclassified samples are on the off-diagonal elements. \n",
+        "Each element $(i,j)$ of the matrix corresponds to predicted class $i$ and actual class $j$, such that indiced $(i,i)$ corresponds to correctly classified samples, which are on the main diagonal.\n",
+        "\n",
+        "A generic confuction matrix for a 3-class problem is shown below \n",
+        "\n",
+        "$\n",
+        "\\begin{array}{|l|l|l|}\n",
+        "\\hline\n",
+        "\\text{Correctly classified class 1}      & \\text{Predicted class 1, actual class 2} & \\text{Predicted class 1, actual class 3} \\\\ \\hline\n",
+        "\\text{Predicted class 2, actual class 1} & \\text{Correctly classified class 2}      & \\text{Predicted class 2, actual class 3} \\\\ \\hline\n",
+        "\\text{Predicted class 3, actual class 1} & \\text{Predicted class 3, actual class 2} & \\text{Correctly classified class 3}      \\\\ \\hline\n",
+        "\\end{array}\n",
+        "$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "cHCwxwPgUcrb",
         "colab_type": "text"
       },
@@ -1172,7 +1196,15 @@
         "\n",
         "$ d(x,x') =  \\sqrt{(x_1 - x'_1)^2+...+(x_n-x'_n)^2} $\n",
         "\n",
-        "And with these values, the input x gets assigned to the class with the largest probability, which is the group that has the lowest euclidean distance. THere are various other methods for calculating this distance, such as Manhattan and Hamming distance. "
+        "And with these values, the input x gets assigned to the class using a majority vote of its $K$ nearest neighbours, based on the above euclidean distance, or equivalently the class with maximum posterior probability.\n",
+        "\n",
+        "The algorithm estimates the posterior probability distribution of a class $Y$ given an input $x$ as \n",
+        "$$\n",
+        "\\hat{P(Y = j | x)} = \\frac{1}{K}\\sum_{y \\in \\mathcal{N_0}}I_{y = j}(y_i = j),\n",
+        "$$\n",
+        "where $\\mathcal{N_0}}$ is the set of $K$ nearest samples to the input $x$, and I being the indicator function.\n",
+        "\n",
+        "The only hyperparameter we are tuning for this model is $K$, i.e the number of neighbours for a given sample which we are taking the majority vote over. The bigger this parameter is, the more rigid the model is. For a range $K \\in [1,50]$ we found that $K = 13$ gave us the best performance in terms of misclassification rate."
       ]
     },
     {
@@ -1533,7 +1565,9 @@
         "![picture](https://drive.google.com/uc?export=view&id=1f-5IK4MFFQ8xpWirYzWO283FFEaCMr-k)\n",
         "Illustration of S-shaped logistic regression graph\n",
         "\n",
-        "Photo via https://www.math.ntnu.no/emner/TMA4268/2019v/4Classif/4Classif.html#logistic_regression"
+        "Photo via https://www.math.ntnu.no/emner/TMA4268/2019v/4Classif/4Classif.html#logistic_regression\n",
+        "\n",
+        "The only hyperparameter we are tuning for this model is the cost of regularization, where a greater value leads to a more rigid, or simple model."
       ]
     },
     {
@@ -1700,7 +1734,10 @@
         "\n",
         " Image taken from:\n",
         " https://en.wikipedia.org/wiki/Decision_tree_learning\n",
-        " "
+        " \n",
+        " For this model we are tuning two hyperparameters, namely the number of trees in the forest and the maximum depth of the decision trees in the forest. We are performing the 5-fold cross-validation once for each parameter we are tuning.\n",
+        " When we find the best values of these parameters we refit the classifier using the full training set as described above.\n",
+        "\n"
       ]
     },
     {
