remove unnecessary code cell

--- a/AppliedML_project.ipynb
+++ b/AppliedML_project.ipynb
@@ -698,6 +698,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "gbpwF_SW03rY",
+        "colab_type": "text"
+      },
+      "source": [
+        "From the correlation matrix above we see that some of the variables in the dataset are highly correlated, e.g Flavanoids and Total Phenols. However, we will not move forward with excluding variables until we have seen the variable importance plot further down the pipeline. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "bAnDWB1GEi6J",
         "colab_type": "text"
       },
@@ -820,19 +830,6 @@
       "source": [
         "From the above printout and plot we observe how the training and test set are distributed. The training set consists of 123 samples, while the test set consists of 54 samples. We will now throw away the test set and focus on the training set for training and evaluating the model. Note that the training set as a whole is not used directly for model evaluation, but is split up into seperate training and validation sets as described above. "
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AFgY5L6NlVZt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
