--- a/AppliedML_project.ipynb
+++ b/AppliedML_project.ipynb
@@ -1167,7 +1167,7 @@
         "\\text{Predicted class 2, actual class 1} & \\text{Correctly classified class 2}      & \\text{Predicted class 2, actual class 3} \\\\ \\hline\n",
         "\\text{Predicted class 3, actual class 1} & \\text{Predicted class 3, actual class 2} & \\text{Correctly classified class 3}      \\\\ \\hline\n",
         "\\end{array}\n",
-        "$"
+        "$\n"
       ]
     },
     {
@@ -1197,9 +1197,9 @@
         "\n",
         "The algorithm estimates the posterior probability distribution of a class $Y$ given an input $x$ as \n",
         "$$\n",
-        "\\hat{P(Y = j | x)} = \\frac{1}{K}\\sum_{y \\in \\mathcal{N_0}}I_{y = j}(y_i = j),\n",
+        "\\hat{P(Y = j | x)} = \\frac{1}{K}\\sum_{y \\in S}I_{y = j}(y_i = j),\n",
         "$$\n",
-        "where $\\mathcal{N_0}}$ is the set of $K$ nearest samples to the input $x$, and I being the indicator function.\n",
+        "where $S$ is the set of $K$ nearest samples to the input $x$, and $I$ being the indicator function.\n",
         "\n",
         "The only hyperparameter we are tuning for this model is $K$, i.e the number of neighbours for a given sample which we are taking the majority vote over. The bigger this parameter is, the more rigid the model is. For a range $K \\in [1,50]$ we found that $K = 13$ gave us the best performance in terms of misclassification rate."
       ]
