restructure, add more titles

--- a/AppliedML_project.ipynb
+++ b/AppliedML_project.ipynb
@@ -84,7 +84,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Dataset**"
+        "# Dataset"
       ]
     },
     {
@@ -708,6 +708,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "_mbMlBvb7_0C",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Train-test split and Parameter Tuning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "bAnDWB1GEi6J",
         "colab_type": "text"
       },
@@ -829,6 +839,16 @@
       },
       "source": [
         "From the above printout and plot we observe how the training and test set are distributed. The training set consists of 123 samples, while the test set consists of 54 samples. We will now throw away the test set and focus on the training set for training and evaluating the model. Note that the training set as a whole is not used directly for model evaluation, but is split up into seperate training and validation sets as described above. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UYvtPOv08Eic",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Feature selection"
       ]
     },
     {
